# box123

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  mm.sh
box123/: CMakeLists.txt  main.cpp  process_events.cpp  process_events.hpp
cmake/: ClangOverrides.cmake  FindSDL2.cmake
include/: CMakeLists.txt  DrawPolicy.hpp  SDLVideoInitPolicy.hpp  Scene.hpp  VideoSurface.hpp
include/box123/: CMakeLists.txt  DrawPolicy.hpp  EventProcessingPolicy.hpp  KeyEventHandlingPolicy.hpp  LoggingPolicy.hpp  OpenGLInitPolicy.hpp  SDLEventHandlingPolicy.hpp  SDLVideoInitPolicy.hpp  Scene.hpp  VideoSurface.hpp
include/internal/: EventProcessingPolicy.hpp  OpenGLInitPolicy.hpp  SDLVideoInitPolicy.hpp  Scene.hpp  VideoSurface.hpp
libbox123eventlogic/: CMakeLists.txt  KeyEventHandlingPolicy.cpp  KeyEventHandlingPolicy.hpp  SDLEventHandlingPolicy.cpp  SDLEventHandlingPolicy.hpp
libbox123logger/: CMakeLists.txt  LoggingPolicy.cpp  LoggingPolicy.hpp
libbox123video/: CMakeLists.txt  OpenGLInitPolicy.cpp  OpenGLInitPolicy.hpp  SDLVideoInitPolicy.cpp  SDLVideoInitPolicy.hpp
unit_test/: CMakeLists.txt  EventProcessingPolicyTestSuite.cpp  SceneTestSuite.cpp  VideoSurfaceTestSuite.cpp  main.cpp  unit_test_libbox123video_VideoSurface.cpp  unit_test_main.cpp
